# vtt

./: .gitignore  README.md
client/: MPTest.tscn  Vtt.csproj  Vtt.sln  icon.svg.import  project.godot
client/assets/: GridSquare.png.import  SelectionPlaceholder.png.import  TokenPlaceholder.png.import  UnitPlaceholder.png.import
client/scenes/: BoardScene2D.tscn  CommandCard.cs  CommandCard.tscn  Gameplay.tscn  GameplayUI.tscn  GridTile.cs  GridTile.tscn  MainMenu.tscn  OfflineBoard.cs  OfflineBoard.tscn  Token.tscn  Unit.tscn
client/scripts/: Actions.cs  AppState.cs  Gameplay.cs  GameplayUI.cs  MainMenu.cs  Math.cs  Scenes.cs  Token.cs  Ui.cs  Unit.cs
client/scripts/Network/: VttClient.cs
client/scripts/board/: BoardScene2D.cs  Token.cs
client/scripts/network/: ClientStatus.cs  Commands.cs  VttClient.cs
client/scripts/network/payload/: AuthenticationData.cs  AuthenticationPayload.cs  BroadcastData.cs  BroadcastGetRequestData.cs  ClientIdentity.cs  Command.cs  Message.cs  Scene2DData.cs  Serialiable.cs  Test.cs
design/: AuthenticationFlowchart.odg  SelectionPlaceholder.xcf  UnitPlaceholder.xcf
server/: Cargo.toml  Makefile.toml  config.toml.default
server/src/: main.rs  util.rs
server/src/config/: config.rs  mod.rs
server/src/data/: dal.rs  dao.rs  db.rs  dbtype.rs  mod.rs  schema.rs
server/src/data/assets/: image.rs  mod.rs
server/src/data/model/: image.rs  message.rs  mod.rs  scene2d.rs  user.rs
server/src/net/: client.rs  commands.rs  enums.rs  mod.rs  payload.rs  queue.rs  server.rs  user.rs
