[package]
authors = ["Peter Lunneberg"]
edition = "2021"
name = "vtt-server"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
directories = "5"
fastwebsockets = { version = "0", features = [ "upgrade" ] }
flexi_logger = "0"
http-body-util = "0"
hyper = "1"
hyper-util = "0"
log = "0"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_repr = "0"
surrealdb = { version = "1", features = [ "kv-mem", "kv-rocksdb" ] }
tokio = { version = "1", features = [ "macros", "rt-multi-thread", "signal" ] }
tokio-util = { version = "0", features = [ "rt" ] }
toml = "0"

[lints.rust]
non_snake_case = "allow"
non_upper_case_globals = "allow"
